Fix 'process is not defined' browser errors
- Added safe process.env checks in public/index.html service worker code
- Fixed unsafe process.env.NODE_ENV access in utils/errorHandler.js
- Applied consistent safety pattern used elsewhere in codebase
- Resolves runtime browser errors in production deployment

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
     
     <!-- Service Worker Registration -->
     <script>
-      if ('serviceWorker' in navigator && process.env.NODE_ENV === 'production') {
+      if ('serviceWorker' in navigator && typeof process !== 'undefined' && process.env && process.env.NODE_ENV === 'production') {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('%PUBLIC_URL%/service-worker.js')
             .then((registration) => {
